--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-    <title>Harshin's Personal Portfolio</title>
+    <title>Harshin | Python Full-Stack Developer</title>
     <meta name="keywords"
         content="Python Full-Stack Developer specializing in Django and Flask frameworks. Crafting robust and scalable web solutions. Proficient in HTML, CSS, Bootstrap, and JavaScript. Seeking opportunities to deliver high-quality code and drive impactful results.">
     <meta name="description" content="Mohammed Harshin | Python Full-Stack Developer">
