--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="ms-hero-name">
-                        <h3><span>Web Developer</span></h3>
+                        <h3><span>Python <br>Full-Stack Developer</span></h3>
                     </div>
                 </div>
                 <div class="art"></div>
