--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- site Favicon -->
     <link rel="icon" href="assets/img/favicon/favicon.png" sizes="32x32">
     <link rel="apple-touch-icon" href="assets/img/favicon/favicon.png">
-    <meta name="msapplication-TileImage" content="assets/img/favicon/favicon.png">
+    <meta name="msapplication-TileImage" content="assets/img/hero/WhatsApp Image 2022-09-23 at 11.50.24 AM.jpg">
 
     <!-- css Font -->
 
@@ -763,7 +763,7 @@
         <div class="container">
             <div class="ms-footer-detail">
                 <div class="ms-copy">
-                    Copyright © <a class="site-name" href="index.html">Harshin</a> all rights reserved. Powered by
+                    Copyright © <a class="site-name" href="index.html">Harshhin</a> all rights reserved. Powered by
                     Harshhin
                 </div>
                 <div class="ms-social">
@@ -783,72 +783,9 @@
     </footer>
     <!-- End Footer -->
 
-    <!-- Whatsapp -->
-    <div class="ms-style ms-right-bottom">
-        <!-- Start Floating Panel Container -->
-        <div class="ms-panel">
-            <!-- Panel Header -->
-            <div class="ms-header">
-                <strong>Need Help?</strong>
-                <p>Chat with us on WhatsApp</p>
-            </div>
-            <!-- Panel Content -->
-            <div class="ms-body">
-                <ul>
-                    <!-- Start Single Contact List -->
-                    <li>
-                        <a class="ms-list" data-number="918866774266"
-                            data-message="Share me your latest resume, HR from Harshin...">
-                            <div class="d-flex bd-highlight">
-                                <!-- Profile Picture -->
-                                <div class="ms-img-cont">
-                                    <img src="assets/img/chat/profile_02.jpg" class="ms-user-img" alt="Profile image">
-                                    <span class="ms-status-icon"></span>
-                                </div>
-                                <!-- Display Name & Last Seen -->
-                                <div class="ms-user-info">
-                                    <span>Maria W Ilvor</span>
-                                    <p>Maria left 7 mins ago</p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <!--/ End Single Contact List -->
-                    <!-- Start Single Contact List -->
-                    <li>
-                        <a class="ms-list" data-number="918866774266"
-                            data-message="Share me your latest resume, HR from Harshin...">
-                            <div class="d-flex bd-highlight">
-                                <!-- Profile Picture -->
-                                <div class="ms-img-cont">
-                                    <img src="assets/img/chat/profile_01.jpg" class="ms-user-img" alt="Profile image">
-                                    <span class="ms-status-icon ms-online"></span>
-                                </div>
-                                <!-- Display Name & Last Seen -->
-                                <div class="ms-user-info">
-                                    <span>William Ilvor</span>
-                                    <p>William is online</p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <!--/ End Single Contact List -->
-
-                </ul>
-            </div>
-        </div>
-        <!--/ End Floating Panel Container -->
-        <!-- Start Right Floating Button-->
-        <div class="ms-right-bottom">
-            <div class="ms-box">
-                <div class="ms-button rotateBackward">
-                    <i class="fa fa-whatsapp"></i>
-                </div>
-            </div>
-        </div>
-        <!--/ End Right Floating Button-->
-    </div>
-    <!-- Whatsapp end -->
+    
+    <a href="https://wa.me/919562789563" class=" whatsapp-float" target="_blank">
+    <i class="fa fa-whatsapp my-whatsapp-float"></i></a>
 
     <!-- Back to top -->
     <div class="progress-wrap">
