--- a/index.html
+++ b/index.html
@@ -763,8 +763,7 @@
         <div class="container">
             <div class="ms-footer-detail">
                 <div class="ms-copy">
-                    Copyright © <a class="site-name" href="index.html">Harshhin</a> all rights reserved. Powered by
-                    Harshhin
+                    Copyright © <a class="site-name" href="index.html">Harshhin</a> all rights reserved.
                 </div>
                 <div class="ms-social">
                     <ul>
