--- a/index.html
+++ b/index.html
@@ -767,13 +767,13 @@
                 </div>
                 <div class="ms-social">
                     <ul>
-                        <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"
+                        <li><a href="https://www.facebook.com/harshinarshu/" target="_blank"><i class="fa fa-facebook"
                                     aria-hidden="true"></i></a></li>
-                        <li><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"
+                        <li><a href="https://www.instagram.com/h4rshh.in/" target="_blank"><i class="fa fa-instagram"
                                     aria-hidden="true"></i></a></li>
-                        <li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"
+                        <li><a href="https://twitter.com/h4rshhhin" target="_blank"><i class="fa fa-twitter"
                                     aria-hidden="true"></i></a></li>
-                        <li><a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin"
+                        <li><a href="https://www.linkedin.com/in/h4rshhin/" target="_blank"><i class="fa fa-linkedin"
                                     aria-hidden="true"></i></a></li>
                     </ul>
                 </div>
