--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
         <div class="container">
             <div class="ms-footer-detail">
                 <div class="ms-copy">
-                    Copyright © <a class="site-name" href="index.html">Harshhin</a> all rights reserved.
+                    Copyright © <a class="site-name" href="https://www.instagram.com/h4rshh.in/">Harshhin </a>2023. All Rights Reserved.
                 </div>
                 <div class="ms-social">
                     <ul>
